# UE-Agent-Asset-Toolkit

./: .gitconfig  .gitignore  .gitmodules  AGENTS.md  AGENT_ONBOARDING.md  AGENT_PROFILE_GUIDE.md  ASSET_TYPES.md  CONTRIBUTING.md  FEATURE-blueprint-graph-extraction.md  LICENSE  README.md  index.bat  index.py  index.sh  mcp-config.example.json  pyproject.toml  setup.bat  setup.py  setup.sh
.claude/: settings.json
.claude/hooks/: rebuild-parser.sh
.github/workflows/: build-parser.yml  release.yml  test.yml
AssetParser/: AssetParser.csproj  Program.cs  README.md  refactor.py  refactor_draft.py
AssetParser.Tests/: AssetParser.Tests.csproj  BytecodeAnalyzerTests.cs  BytecodeCommandTests.cs  ControlFlowAnalyzerTests.cs
AssetParser/Commands/: BatchBlueprintCommand.cs  BatchCommands.cs  BatchDataTableCommand.cs  BatchMaterialCommand.cs  BatchWidgetCommand.cs  (+11 more)
UnrealAgent/: config.example.json  mcp_server.py  project_profile.py  requirements.txt  tools.py
docs/: graph-compact-benchmark.md  tutorial-mvvm-health-bar.md
scripts/: safe-index.ps1  safe-index.sh
tests/: test_cli.py  test_cpp_bridge.py  test_data_asset_handler.py  test_enrich.py  test_fuzzy_match.py  test_gameplay_effect_handler.py  test_gameplay_tags.py  test_inheritance.py  test_inspector.py  test_parser_download.py  test_parser_resolver.py  test_pathutil.py  test_project_profile.py  test_query_routing.py
unreal_agent/: __init__.py  cli.py  config.example.json  engine_detect.py  mcp_server.py  parser_download.py  parser_resolver.py  pathutil.py  project_profile.py  requirements.txt  tools.py
(+40 files in other folders)
